--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "autoprefixer": "^9.8.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "5.0.2",
+    "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.6.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
